--- a/src/main/locales/cy/cookies.json
+++ b/src/main/locales/cy/cookies.json
@@ -19,5 +19,11 @@
   "p3": "We use Google Analytics software to collect information about how you use this service. We do this to help make sure the service is meeting the needs of its users and to help us make improvements. We do not allow Google to use or share the data about how you use this site.",
   "saved": "Your cookie settings were saved",
   "additionalCookies": "Government services may set additional cookies and, if so, will have their own cookie policy and banner.",
-  "homePageLink": "Go to homepage"
+  "homePageLink": "Go to homepage",
+  "gaDescription": "A randomly generated reference used to identify unique users and inform referring sites, visitor and session counts",
+  "gaDuration": "2 years",
+  "gidDescription": "Used to distinguish users",
+  "gidDuration": "24 hours",
+  "gatDescription": "Used to throttle request rate",
+  "gatDuration": "1 minute"
 }
