--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -1,5 +1,5 @@
 {
-  "title": "{courtSlug} - Find a Court or Tribunal - GOV.UK",
+  "title": "{courtName} - Find a Court or Tribunal - GOV.UK",
   "serviceName": "Find a Court or Tribunal",
   "notInPersonP1": "This location services {catchmentArea} for {serviceArea}. We do not provide an in-person service.",
   "contactUsHeading": "Contact us",
@@ -46,5 +46,5 @@
   "updates": "Get an update with your application",
   "altImageText": "Front view of",
   "divorceHearings": "Divorce hearings",
-  "seoMetadataDescription": "{courtSlug} - Find contact details, opening times, how to get to here, types of cases managed, disabled access to the building"
+  "seoMetadataDescription": "{courtName} - Find contact details, opening times, how to get to here, types of cases managed, disabled access to the building"
 }
