--- a/src/main/locales/cy/notFound.json
+++ b/src/main/locales/cy/notFound.json
@@ -1,6 +1,6 @@
 {
   "title": "Ni ellir dod o hyd i'r dudalen - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
   "h1": "Ni ellir dod o hyd i'r dudalen",
-  "p1": "If you typed the web address, check it is correct.",
-  "p2": "If you pasted the web address, check you copied the entire address."
+  "p1": "Os bu ichi deipio'r cyfeiriad gwefan, gwiriwch ei fod yn gywir.",
+  "p2": "Os bu ichi ludo'r cyfeiriad gwefan, gwiriwch eich bod wedi copïo'r cyfeiriad yn gyfan."
 }
